force-app/main/default/objects/TC_Case__x/TC_Case__x.object-meta.xml
<CustomObject>
    <description>Hospitality Org connects to the TravelClick Org using Salesforce Connect Cross Org Adapter</description>
    <externalDataSource>TC_Production</externalDataSource>
    <externalName>Case</externalName>
    <label>TC Case</label>
    <pluralLabel>TC Cases</pluralLabel>
</CustomObject>