force-app/main/default/objects/TC_Case__x/fields/Account_Manager_Division_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Division_c__c</fullName>
    <externalDeveloperName>Account_Manager_Division__c</externalDeveloperName>
    <label>Account Manager Division</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>