force-app/main/default/objects/TC_Case__x/fields/Account_Manager_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Name_c__c</fullName>
    <externalDeveloperName>Account_Manager_Name__c</externalDeveloperName>
    <label>Account Manager Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>