force-app/main/default/objects/TC_Case__x/fields/Account_Service_Level_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Service_Level_c__c</fullName>
    <externalDeveloperName>Account_Service_Level__c</externalDeveloperName>
    <label>Account Service Level</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>