force-app/main/default/objects/TC_Case__x/fields/Account_Territory_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory_c__c</fullName>
    <externalDeveloperName>Account_Territory__c</externalDeveloperName>
    <label>Account Territory</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>