force-app/main/default/objects/TC_Case__x/fields/Account_Website_Type_del_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Website_Type_del_c__c</fullName>
    <externalDeveloperName>Account_Website_Type_del__c</externalDeveloperName>
    <label>Account Website Type</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>