force-app/main/default/objects/TC_Case__x/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>Property Name</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>TC Cases</relationshipLabel>
    <relationshipName>TC_Cases</relationshipName>
    <type>ExternalLookup</type>
</CustomField>