force-app/main/default/objects/TC_Case__x/fields/Additional_Contact_Email_Ids_c__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Email_Ids_c__c</fullName>
    <externalDeveloperName>Additional_Contact_Email_Ids__c</externalDeveloperName>
    <label>Additional Contact Email Ids</label>
    <length>32768</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>