force-app/main/default/objects/TC_Case__x/fields/Aditional_Request_c__c.field-meta.xml
<CustomField>
    <fullName>Aditional_Request_c__c</fullName>
    <externalDeveloperName>Aditional_Request__c</externalDeveloperName>
    <label>Aditional Request Information</label>
    <length>1500</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>