force-app/main/default/objects/TC_Case__x/fields/Affected_Object_c__c.field-meta.xml
<CustomField>
    <fullName>Affected_Object_c__c</fullName>
    <externalDeveloperName>Affected_Object__c</externalDeveloperName>
    <label>Affected Object</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Content/Files/Documents</fullName>
            </value>
            <value>
                <fullName>Desktop Integration</fullName>
            </value>
            <value>
                <fullName>Homepage</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Reports/Dashboards</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>