force-app/main/default/objects/TC_Case__x/fields/Application_Deletions_c__c.field-meta.xml
<CustomField>
    <fullName>Application_Deletions_c__c</fullName>
    <externalDeveloperName>Application_Deletions__c</externalDeveloperName>
    <label>Application Deletions</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>