force-app/main/default/objects/TC_Case__x/fields/Asset_Support_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Asset_Support_Type_c__c</fullName>
    <externalDeveloperName>Asset_Support_Type__c</externalDeveloperName>
    <label>Asset Support Type</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>