force-app/main/default/objects/TC_Case__x/fields/Auto_response_email_sent_c__c.field-meta.xml
<CustomField>
    <fullName>Auto_response_email_sent_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Auto_response_email_sent__c</externalDeveloperName>
    <label>Auto-response email sent</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>