force-app/main/default/objects/TC_Case__x/fields/BI_Support_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>BI_Support_Manager_c__c</fullName>
    <externalDeveloperName>BI_Support_Manager__c</externalDeveloperName>
    <label>BI Support Manager</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>