force-app/main/default/objects/TC_Case__x/fields/BID_Number_c__c.field-meta.xml
<CustomField>
    <fullName>BID_Number_c__c</fullName>
    <externalDeveloperName>BID_Number__c</externalDeveloperName>
    <inlineHelpText>What is the BID Number ID?</inlineHelpText>
    <label>BID Number</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>