force-app/main/default/objects/TC_Case__x/fields/Case_Age_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_c__c</fullName>
    <externalDeveloperName>Case_Age__c</externalDeveloperName>
    <inlineHelpText>Age of case in hours.</inlineHelpText>
    <label>Case Age (Hours)</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>1</scale>
    <type>Number</type>
</CustomField>