force-app/main/default/objects/TC_Case__x/fields/Case_Closed_Month_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Month_c__c</fullName>
    <externalDeveloperName>Case_Closed_Month__c</externalDeveloperName>
    <label>Case Closed Month</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>