force-app/main/default/objects/TC_Case__x/fields/Case_Contact_Notification_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Notification_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Case_Contact_Notification__c</externalDeveloperName>
    <label>Case Contact Notification</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>