force-app/main/default/objects/TC_Case__x/fields/Case_Level_of_Difficulty_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Level_of_Difficulty_c__c</fullName>
    <externalDeveloperName>Case_Level_of_Difficulty__c</externalDeveloperName>
    <label>Case Level of Difficulty</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>