force-app/main/default/objects/TC_Case__x/fields/Case_Nature_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Nature_c__c</fullName>
    <externalDeveloperName>Case_Nature__c</externalDeveloperName>
    <label>Case Nature</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-Off</fullName>
            </value>
            <value>
                <fullName>Repetitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>