force-app/main/default/objects/TC_Case__x/fields/Case_Open_Day_of_week_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_Day_of_week_c__c</fullName>
    <externalDeveloperName>Case_Open_Day_of_week__c</externalDeveloperName>
    <label>Case Open Day of week</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>