force-app/main/default/objects/TC_Case__x/fields/Case_Open_Time_by_Hour_CST_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_Time_by_Hour_CST_c__c</fullName>
    <externalDeveloperName>Case_Open_Time_by_Hour_CST__c</externalDeveloperName>
    <label>Case Open Time by Hour CST</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>