force-app/main/default/objects/TC_Case__x/fields/Case_Origin_Picture_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin_Picture_c__c</fullName>
    <externalDeveloperName>Case_Origin_Picture__c</externalDeveloperName>
    <label>Origin</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>