force-app/main/default/objects/TC_Case__x/fields/Case_Owner_Role_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Role_c__c</fullName>
    <externalDeveloperName>Case_Owner_Role__c</externalDeveloperName>
    <label>Case Owner Role</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>