force-app/main/default/objects/TC_Case__x/fields/Case_Priority_Flag_del_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority_Flag_del_c__c</fullName>
    <externalDeveloperName>Case_Priority_Flag_del__c</externalDeveloperName>
    <label>Priority Flag</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>