force-app/main/default/objects/TC_Case__x/fields/Case_Resolution_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution_c__c</fullName>
    <externalDeveloperName>Case_Resolution__c</externalDeveloperName>
    <inlineHelpText>These are the final case comments &amp; resolution made by the case owner when closing the case.</inlineHelpText>
    <label>Case Resolution</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>