force-app/main/default/objects/TC_Case__x/fields/Case_Source_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Source_c__c</fullName>
    <externalDeveloperName>Case_Source__c</externalDeveloperName>
    <inlineHelpText>Who Submitted This Case?</inlineHelpText>
    <label>Case Source</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adam Czekaj</fullName>
            </value>
            <value>
                <fullName>Agustin Ballester</fullName>
            </value>
            <value>
                <fullName>Alejandro Lista</fullName>
            </value>
            <value>
                <fullName>Alexis Welner</fullName>
            </value>
            <value>
                <fullName>Allison Ahrens</fullName>
            </value>
            <value>
                <fullName>Allwyn Satvedi</fullName>
            </value>
            <value>
                <fullName>Alma Hayes</fullName>
            </value>
            <value>
                <fullName>Andrea Broggi</fullName>
            </value>
            <value>
                <fullName>Andrew Robinson</fullName>
            </value>
            <value>
                <fullName>Ann Black</fullName>
            </value>
            <value>
                <fullName>Anne Auchet</fullName>
            </value>
            <value>
                <fullName>Anoop Bhaskaran</fullName>
            </value>
            <value>
                <fullName>Birgit Gemmer</fullName>
            </value>
            <value>
                <fullName>Bonnie Mui</fullName>
            </value>
            <value>
                <fullName>Carolyn Still</fullName>
            </value>
            <value>
                <fullName>Catherine Garozzo</fullName>
            </value>
            <value>
                <fullName>Catherine Tondelli</fullName>
            </value>
            <value>
                <fullName>Cathrine Lonnberg</fullName>
            </value>
            <value>
                <fullName>Cathy Ruppel</fullName>
            </value>
            <value>
                <fullName>Cem Cetinturk</fullName>
            </value>
            <value>
                <fullName>Chanda Leonard</fullName>
            </value>
            <value>
                <fullName>Chris Rockett</fullName>
            </value>
            <value>
                <fullName>Christina Underwood</fullName>
            </value>
            <value>
                <fullName>Christine Foster</fullName>
            </value>
            <value>
                <fullName>Ciaran Brazil</fullName>
            </value>
            <value>
                <fullName>David Isljamovski</fullName>
            </value>
            <value>
                <fullName>Debbie Mongiello</fullName>
            </value>
            <value>
                <fullName>Debbie Siegfried</fullName>
            </value>
            <value>
                <fullName>Debra Schmitt</fullName>
            </value>
            <value>
                <fullName>DOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>