force-app/main/default/objects/TC_Case__x/fields/Case_Support_Team_c__c.field-meta.xml
<CustomField>
    <fullName>Case_Support_Team_c__c</fullName>
    <externalDeveloperName>Case_Support_Team__c</externalDeveloperName>
    <label>Case Support Team</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TravelClick SEH Support Team</fullName>
            </value>
            <value>
                <fullName>GLH Support</fullName>
            </value>
            <value>
                <fullName>First Hotels Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>