force-app/main/default/objects/TC_Case__x/fields/Check_Data_to_Report_Updated_for_Dist_c__c.field-meta.xml
<CustomField>
    <fullName>Check_Data_to_Report_Updated_for_Dist_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Check_Data_to_Report_Updated_for_Dist__c</externalDeveloperName>
    <inlineHelpText>Box is checked when status goes from &quot;On Hold - Check Data&quot; to &quot;Report Updated for Distribution&quot;&quot;</inlineHelpText>
    <label>Report Updated for Distribution</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>