force-app/main/default/objects/TC_Case__x/fields/Client_Value_c__c.field-meta.xml
<CustomField>
    <fullName>Client_Value_c__c</fullName>
    <externalDeveloperName>Client_Value__c</externalDeveloperName>
    <inlineHelpText>from YTD iPace report</inlineHelpText>
    <label>Client Value</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>