force-app/main/default/objects/TC_Case__x/fields/Close_Out_Threshold_Discussion_c__c.field-meta.xml
<CustomField>
    <fullName>Close_Out_Threshold_Discussion_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Close_Out_Threshold_Discussion__c</externalDeveloperName>
    <inlineHelpText>This checkbox is to indicate this IHOS customer has been advised that Close Out Thresholds are a Best Practice used to prevent Overbookings by OTAS yielded to via IHOS.</inlineHelpText>
    <label>Close Out Threshold Discussion</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>