force-app/main/default/objects/TC_Case__x/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <externalDeveloperName>ClosedDate</externalDeveloperName>
    <label>Closed Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>