force-app/main/default/objects/TC_Case__x/fields/CM_Hotel_ID_c__c.field-meta.xml
<CustomField>
    <fullName>CM_Hotel_ID_c__c</fullName>
    <externalDeveloperName>CM_Hotel_ID__c</externalDeveloperName>
    <inlineHelpText>What is the CM Hotel ID?</inlineHelpText>
    <label>CM Hotel ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>