force-app/main/default/objects/TC_Case__x/fields/CM_Product_Version_c__c.field-meta.xml
<CustomField>
    <fullName>CM_Product_Version_c__c</fullName>
    <externalDeveloperName>CM_Product_Version__c</externalDeveloperName>
    <inlineHelpText>Which Channel Management Product version has this Account?</inlineHelpText>
    <label>CM Product Version</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>