force-app/main/default/objects/TC_Case__x/fields/Competitor_1_BID_c__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1_BID_c__c</fullName>
    <externalDeveloperName>Competitor_1_BID__c</externalDeveloperName>
    <label>Competitor 1 BID</label>
    <length>30</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>