force-app/main/default/objects/TC_Case__x/fields/Competitor_3_BID_c__c.field-meta.xml
<CustomField>
    <fullName>Competitor_3_BID_c__c</fullName>
    <externalDeveloperName>Competitor_3_BID__c</externalDeveloperName>
    <label>Competitor 3 BID</label>
    <length>30</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>