force-app/main/default/objects/TC_Case__x/fields/Competitor_5_c__c.field-meta.xml
<CustomField>
    <fullName>Competitor_5_c__c</fullName>
    <externalDeveloperName>Competitor_5__c</externalDeveloperName>
    <label>Competitor 5</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>