force-app/main/default/objects/TC_Case__x/fields/Completed_Risks_c__c.field-meta.xml
<CustomField>
    <fullName>Completed_Risks_c__c</fullName>
    <externalDeveloperName>Completed_Risks__c</externalDeveloperName>
    <inlineHelpText>Number of completed risks associated with the account.</inlineHelpText>
    <label>Completed Risks</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>