force-app/main/default/objects/TC_Case__x/fields/Confirmed_Release_Version_c__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Release_Version_c__c</fullName>
    <externalDeveloperName>Confirmed_Release_Version__c</externalDeveloperName>
    <label>Confirmed Release Version</label>
    <length>80</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>