force-app/main/default/objects/TC_Case__x/fields/Contract_Currency_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Currency_c__c</fullName>
    <externalDeveloperName>Contract_Currency__c</externalDeveloperName>
    <label>Contract Currency</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>