force-app/main/default/objects/TC_Case__x/fields/Contract_Signed_Electronically_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Electronically_c__c</fullName>
    <externalDeveloperName>Contract_Signed_Electronically__c</externalDeveloperName>
    <label>Contract Signed Electronically</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>