force-app/main/default/objects/TC_Case__x/fields/Contract_Validation_Error_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Validation_Error_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Contract_Validation_Error__c</externalDeveloperName>
    <label>Contract Validation Error</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>