force-app/main/default/objects/TC_Case__x/fields/Cost_Estimate_c__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate_c__c</fullName>
    <externalDeveloperName>Cost_Estimate__c</externalDeveloperName>
    <inlineHelpText>Please include Currency code (USD, EUR, etc)</inlineHelpText>
    <label>Cost Estimate</label>
    <length>15</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>