force-app/main/default/objects/TC_Case__x/fields/Covid_Relief_c__c.field-meta.xml
<CustomField>
    <fullName>Covid_Relief_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Covid_Relief__c</externalDeveloperName>
    <label>Covid Relief</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>