force-app/main/default/objects/TC_Case__x/fields/Credit_Issue_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Credit_Issue_Reason_c__c</fullName>
    <externalDeveloperName>Credit_Issue_Reason__c</externalDeveloperName>
    <label>Credit Issue Reason</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation - Management Change (new owner will not pay)</fullName>
            </value>
            <value>
                <fullName>Billing Error (Other)</fullName>
            </value>
            <value>
                <fullName>Billing Error (Manual File)</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Cancellation - Not Within Contract Terms</fullName>
            </value>
            <value>
                <fullName>Duplicate Opty</fullName>
            </value>
            <value>
                <fullName>Contract Issue</fullName>
            </value>
            <value>
                <fullName>Product Downgrade</fullName>
            </value>
            <value>
                <fullName>Migration Error</fullName>
            </value>
            <value>
                <fullName>Cancellation-Within Contract Terms</fullName>
            </value>
            <value>
                <fullName>Product Upgrade</fullName>
            </value>
            <value>
                <fullName>Product Conversion</fullName>
            </value>
            <value>
                <fullName>Fulfillment Issue</fullName>
            </value>
            <value>
                <fullName>Cancellation-Nonpayment Auto Suspension</fullName>
            </value>
            <value>
                <fullName>Order Management Issue</fullName>
            </value>
            <value>
                <fullName>Customer Change - Ownership Change</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>Customer Change - Start Date</fullName>
            </value>
            <value>
                <fullName>Customer Change - Billing Frequency</fullName>
            </value>
            <value>
                <fullName>Customer Change - Billing Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>