force-app/main/default/objects/TC_Case__x/fields/Customer_Follow_Up_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Follow_Up_Date_c__c</fullName>
    <externalDeveloperName>Customer_Follow_Up_Date__c</externalDeveloperName>
    <label>Customer Follow Up Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>