force-app/main/default/objects/TC_Case__x/fields/Date_Time_Assigned_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Assigned_c__c</fullName>
    <externalDeveloperName>Date_Time_Assigned__c</externalDeveloperName>
    <label>Date/Time Assigned</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>