force-app/main/default/objects/TC_Case__x/fields/Demand_Property_ID_3_c__c.field-meta.xml
<CustomField>
    <fullName>Demand_Property_ID_3_c__c</fullName>
    <externalDeveloperName>Demand_Property_ID_3__c</externalDeveloperName>
    <label>Demand Property ID 3</label>
    <length>40</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>