force-app/main/default/objects/TC_Case__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <externalDeveloperName>Description</externalDeveloperName>
    <inlineHelpText>Use the icon in the lower right corner to expand the window to see more.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>