force-app/main/default/objects/TC_Case__x/fields/Design_Time_Spent_c__c.field-meta.xml
<CustomField>
    <fullName>Design_Time_Spent_c__c</fullName>
    <externalDeveloperName>Design_Time_Spent__c</externalDeveloperName>
    <inlineHelpText>Time should be entered in Hours not Minutes</inlineHelpText>
    <label>Design Time Spent</label>
    <precision>6</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>1</scale>
    <type>Number</type>
</CustomField>