force-app/main/default/objects/TC_Case__x/fields/Dev_URL_c__c.field-meta.xml
<CustomField>
    <fullName>Dev_URL_c__c</fullName>
    <externalDeveloperName>Dev_URL__c</externalDeveloperName>
    <label>Dev URL</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>