force-app/main/default/objects/TC_Case__x/fields/Discretionary_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Amount_c__c</fullName>
    <externalDeveloperName>Discretionary_Amount__c</externalDeveloperName>
    <label>Credit Amount</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>