force-app/main/default/objects/TC_Case__x/fields/Dispute_Originator_c__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Originator_c__c</fullName>
    <externalDeveloperName>Dispute_Originator__c</externalDeveloperName>
    <label>Dispute Originator</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>