force-app/main/default/objects/TC_Case__x/fields/DST_offset_c__c.field-meta.xml
<CustomField>
    <fullName>DST_offset_c__c</fullName>
    <externalDeveloperName>DST_offset__c</externalDeveloperName>
    <label>DST offset</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>