force-app/main/default/objects/TC_Case__x/fields/Dynamic_Rate_Update_Y_N_c__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Rate_Update_Y_N_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Dynamic_Rate_Update_Y_N__c</externalDeveloperName>
    <label>Dynamic Rate Update (Y/N)</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>