force-app/main/default/objects/TC_Case__x/fields/Estimated_Time_to_Complete_c__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_to_Complete_c__c</fullName>
    <externalDeveloperName>Estimated_Time_to_Complete__c</externalDeveloperName>
    <inlineHelpText>Enter the amount of time taken to complete the task in hours. Example 1 hour and a half would be 1.5 hours. Increments of 30 min ONLY.</inlineHelpText>
    <label>Estimated Time to Complete</label>
    <precision>8</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>