force-app/main/default/objects/TC_Case__x/fields/Extras_c__c.field-meta.xml
<CustomField>
    <fullName>Extras_c__c</fullName>
    <externalDeveloperName>Extras__c</externalDeveloperName>
    <label>Extras</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Banner Video</fullName>
            </value>
            <value>
                <fullName>Extra Update</fullName>
            </value>
            <value>
                <fullName>1 Extra Language</fullName>
            </value>
            <value>
                <fullName>2 Extra Language</fullName>
            </value>
            <value>
                <fullName>3 Extra Language</fullName>
            </value>
            <value>
                <fullName>4 Extra Language</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>