force-app/main/default/objects/TC_Case__x/fields/Files_Other_c__c.field-meta.xml
<CustomField>
    <fullName>Files_Other_c__c</fullName>
    <externalDeveloperName>Files_Other__c</externalDeveloperName>
    <label>Files:  Other</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>