force-app/main/default/objects/TC_Case__x/fields/Files_Shell_c__c.field-meta.xml
<CustomField>
    <fullName>Files_Shell_c__c</fullName>
    <externalDeveloperName>Files_Shell__c</externalDeveloperName>
    <inlineHelpText>Line numbers (if applicable)</inlineHelpText>
    <label>Files:  Shell</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>