force-app/main/default/objects/TC_Case__x/fields/First_Contact_Resolution_c__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Resolution_c__c</fullName>
    <externalDeveloperName>First_Contact_Resolution__c</externalDeveloperName>
    <inlineHelpText>“From the customer’s point of view, was this solved in their first interaction with CC or did there need to have multiple email or phone exchanges to resolve the issue?”</inlineHelpText>
    <label>First Contact Resolution?</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>