force-app/main/default/objects/TC_Case__x/fields/Focused_Customer_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Focused_Customer_Group_c__c</fullName>
    <externalDeveloperName>Focused_Customer_Group__c</externalDeveloperName>
    <label>Retention Customer</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>